--- a/index_TA_dash2.html
+++ b/index_TA_dash2.html
@@ -172,7 +172,7 @@ padding:0px;
 
 
 <div id="wrapper">
-<div id="header"><h1>Number of Temporary Activities in Certain Fields of Work, by NGOs&rsquo; Country/Region of Origin, January-July 2017</h1></div>
+<div id="header"><h1>Number of Temporary Activities in Certain Fields of Work, by NGOs&rsquo; Country/Region of Origin, January-August 2017</h1></div>
 <div id='legenddiv'></div>
 <div id='piediv'></div>
 <div id='histogramdiv'></div>
@@ -522,22 +522,22 @@ var freqData=[
 {
 	origin: "Germany",
   freq:{
-  Aging: 0,
+  Aging: 2,
   Agriculture: 0,
   Animals: 0,
   Culture: 0,
-  Capacity: 2,
+  Capacity: 4,
   Disabilities: 2,
-  Disaster: 0,
+  Disaster: 1,
   Development: 2,
   Education: 5,
   Energy: 0,
   Environment: 3,
   Ethnic: 0,
   Health: 0,
-  Infrastructure: 1,
+  Infrastructure: 2,
   International: 3,
-  Labor: 3,
+  Labor: 4,
   Law: 0,
   Media: 0,
   Poverty: 2,
@@ -548,37 +548,67 @@ var freqData=[
   Tourism: 0,
   Trade: 1,
   Women: 1,
-  Youth: 2}},
+  Youth: 4}},
 {
 	origin: "Hong Kong",
   freq:{
-	Aging: 3,
+	Aging: 8,
 	Agriculture: 2,
 	Animals: 0,
-	Culture: 1,
-	Capacity: 8,
-	Disabilities: 2,
-	Disaster: 17,
-	Development: 0,
-	Education: 32,
+	Culture: 2,
+	Capacity: 14,
+	Disabilities: 12,
+	Disaster: 21,
+	Development: 3,
+	Education: 46,
 	Energy: 1,
 	Environment: 7,
 	Ethnic: 1,
-	Health: 7,
-	Infrastructure: 12,
+	Health: 8,
+	Infrastructure: 18,
 	International: 0,
-	Labor: 0,
+	Labor: 1,
 	Law: 0,
   	Media: 0,
 	Poverty: 19,
   Religion: 0,
-	Rural: 6,
+	Rural: 7,
 	Sport: 1,
-	Technology: 0,
+	Technology: 1,
 	Tourism: 0,
 	Trade: 0,
 	Women: 3,
-	Youth: 38}},
+	Youth: 46}},
+	{
+	origin: "Italy",
+  freq:{
+	Aging: 0,
+	Agriculture: 0,
+	Animals: 0,
+	Culture: 0,
+	Capacity: 0,
+	Disabilities: 0,
+	Disaster: 0,
+	Development: 0,
+	Education: 0,
+	Energy: 0,
+	Environment: 1,
+	Ethnic: 0,
+	Health: 0,
+	Infrastructure: 0,
+	International: 0,
+	Labor: 0,
+	Law: 0,
+  	Media: 0,
+	Poverty: 0,
+  Religion: 0,
+	Rural: 0,
+	Sport: 0,
+	Technology: 0,
+	Tourism: 0,
+	Trade: 0,
+	Women: 0,
+	Youth: 0}},
 {
 	origin: "Japan",
   freq:{
@@ -707,8 +737,8 @@ var freqData=[
 	Agriculture: 0,
 	Animals: 0,
 	Culture: 0,
-	Capacity: 0,
-	Disabilities: 0,
+	Capacity: 1,
+	Disabilities: 1,
 	Disaster: 0,
 	Development: 0,
 	Education: 1,
@@ -719,7 +749,7 @@ var freqData=[
 	Infrastructure: 0,
 	International: 0,
 	Labor: 0,
-	Law: 0,
+	Law: 1,
   	Media: 0,
 	Poverty: 0,
   Religion: 0,
@@ -777,7 +807,7 @@ var freqData=[
 	Ethnic: 0,
 	Health: 0,
 	Infrastructure: 0,
-	International: 1,
+	International: 2,
 	Labor: 0,
 	Law: 0,
   	Media: 0,
@@ -785,9 +815,9 @@ var freqData=[
   Religion: 0,
 	Rural: 0,
 	Sport: 0,
-	Technology: 0,
+	Technology: 1,
 	Tourism: 0,
-	Trade: 1,
+	Trade: 2,
 	Women: 0,
 	Youth: 2}},
   {
@@ -887,19 +917,19 @@ var freqData=[
   Agriculture: 0,
   Animals: 2,
   Culture: 1,
-  Capacity: 2,
+  Capacity: 3,
   Disabilities: 7,
-  Disaster: 1,
+  Disaster: 2,
   Development: 0,
-  Education: 6,
+  Education: 11,
   Energy: 0,
-  Environment: 4,
+  Environment: 5,
   Ethnic: 0,
-  Health: 8,
-  Infrastructure: 1,
-  International: 3,
+  Health: 9,
+  Infrastructure: 2,
+  International: 5,
   Labor: 1,
-  Law: 0,
+  Law: 1,
   Media: 1,
   Poverty: 2,
   Religion: 1,
@@ -909,7 +939,7 @@ var freqData=[
   Tourism: 0,
   Trade: 1,
   Women: 2,
-  Youth: 13}},
+  Youth: 16}},
   {
   	origin: "Vietnam",
     freq:{
@@ -947,6 +977,6 @@ dashboard('#dashboard',freqData);
 
 d3.select("body").append("div")
 .attr("class", "tooltip1")
-.html("<em><ul><li>Each temporary activity may be related to multiple fields of work, and therefore the totals shown in this chart are higher than the total number of temporary activities during the same period. We designated fields based on the activity titles listed on the Ministry of Public Security website.</li><li>Only activities that began on or before July 31, 2017 are shown here. The duration of any given temporary activity may extend beyond that date.</li><li>Only one country or region of origin for each organization is included, based on organizations’ public information.</li><li>Some fields of work have been abbreviated here: Animal Protection is shortened to Animals, Arts and Culture to Culture, Civil Society Capacity-Building to Capacity, Disaster Relief to Disaster, Economic Development to Development, Ethnic Affairs to Ethnic, International Relations/Exchange to International, Labor and Migrants to Labor, Law and Governance to Law, Poverty Alleviation to Poverty, Rural Issues/Development to Rural, and Women’s Issues to Women.</li></ul></em>");
+.html("<em><ul><li>Each temporary activity may be related to multiple fields of work, and therefore the totals shown in this chart are higher than the total number of temporary activities during the same period. We designated fields based on the activity titles listed on the Ministry of Public Security website.</li><li>Only activities that began on or before August 31, 2017 are shown here. The duration of any given temporary activity may extend beyond that date.</li><li>Only one country or region of origin for each organization is included, based on organizations’ public information.</li><li>Some fields of work have been abbreviated here: Animal Protection is shortened to Animals, Arts and Culture to Culture, Civil Society Capacity-Building to Capacity, Disaster Relief to Disaster, Economic Development to Development, Ethnic Affairs to Ethnic, International Relations/Exchange to International, Labor and Migrants to Labor, Law and Governance to Law, Poverty Alleviation to Poverty, Rural Issues/Development to Rural, and Women’s Issues to Women.</li></ul></em>");
 
 </script>
