--- a/index_TA_choro.html
+++ b/index_TA_choro.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Foreign NGO Representative Offices by Province</title>
+    <title>Foreign NGO Temporary Activities by Province</title>
   </head>
   <style>
 
@@ -146,7 +146,7 @@
   <body>
 
     <div id="wrapper">
-    <div id="header"><h1>Map of Temporary Activities by Province, January-June 2017</h1></div>
+    <div id="header"><h1>Map of Temporary Activities by Province, January-August 2017</h1></div>
     <div id='mapdiv'></div>
     </div>
 
@@ -251,7 +251,7 @@
     var path = d3.geo.path().projection(projection)
     var colorScale = d3.scale.quantize().range(colors)
 
-    d3.csv('TAbyprov_2017-06-30.csv', function(data) {
+    d3.csv('TAbyprovChoro.csv', function(data) {
       colorScale.domain([ d3.min(data, function(d) { return d.total }), d3.max(data, function(d) { return d.total })])
 
       d3.json('china_provinces1.json', function(json) {
@@ -282,7 +282,7 @@
     });
     d3.select("body").append("div")
     .attr("class", "tooltip1")
-    .html("<em><ul><li>&ldquo;Province&rdquo; here also refers to provincial-level municipalities and autonomous regions.</li><li>One temporary activity may take place in multiple provinces; this map shows all provinces where activities have taken place, therefore one activity may be counted in multiple provinces.</li><li>This map does not show the one activity that was filed to take place in all of China.</li><li>Only activities that began on or before June 30, 2017 are shown here. The duration of any given temporary activity may extend beyond that date.</li></ul></em>");
+    .html("<em><ul><li>&ldquo;Province&rdquo; here also refers to provincial-level municipalities and autonomous regions.</li><li>One temporary activity may take place in multiple provinces; this map shows all provinces where activities have taken place, therefore one activity may be counted in multiple provinces.</li><li>This map does not show the one activity that was filed to take place in all of China.</li><li>Only activities that began on or before August 31, 2017 are shown here. The duration of any given temporary activity may extend beyond that date.</li></ul></em>");
 
 
 
