--- a/index_psu.html
+++ b/index_psu.html
@@ -83,40 +83,44 @@ font-style: italic;
 <table class="sortable">
 <!–– add your tableizer data below this line––>
 
-
-
 <thead><tr class="tableizer-firstrow"><th>Professional Supervisory Unit</th><th>Chinese Name</th><th>Number of Organizations Sponsored</th><th>Registration Location</th><th>NGOs' Field of Work</th></tr></thead><tbody>
- <tr><td>Beijing Commission of Commerce</td><td>北京市商务委员会</td><td>8</td><td>Beijing</td><td>Trade</td></tr>
- <tr><td>Beijing Commission of Economy and Informatization</td><td>北京市经济与信息化委员会</td><td>2</td><td>Beijing</td><td>Trade, International Relations/Exchange</td></tr>
+ <tr><td>Beijing Commission of Commerce</td><td>北京市商务委员会</td><td>13</td><td>Beijing</td><td>Trade, Arts and Culture, International Relations/Exchange</td></tr>
+ <tr><td>Beijing Commission of Economy and Informatization</td><td>北京市经济和信息化委员会</td><td>2</td><td>Beijing</td><td>Trade, International Relations/Exchange</td></tr>
+ <tr><td>China Disabled Person's Federation</td><td>中国残疾人联合会</td><td>1</td><td>Beijing</td><td>Disabilities, Education, Health, Labor and Migrants, International Relations/Exchange</td></tr>
  <tr><td>China National Tourism Administration</td><td>中国国家旅游局</td><td>1</td><td>Beijing</td><td>Tourism</td></tr>
  <tr><td>Chinese Association for International Understanding</td><td>中国国际交流协会</td><td>1</td><td>Beijing</td><td>International Relations/Exchange, Law and Governance, Environment, Labor</td></tr>
- <tr><td>Chinese People's Association for Friendship with Foreign Countries</td><td>中国人民对外友好协会</td><td>7</td><td>Beijing</td><td>Arts and Culture, Civil Society Capacity-Building, Disaster Relief, Economic Development, Education, Environment, Health, International Relations/Exchange, Poverty Allevation, Trade, Women's Issues, Youth</td></tr>
+ <tr><td>Chinese People's Association for Friendship with Foreign Countries</td><td>中国人民对外友好协会</td><td>8</td><td>Beijing</td><td>Arts and Culture, Civil Society Capacity-Building, Disaster Relief, Economic Development, Education, Environment, Health, International Relations/Exchange, Poverty Allevation, Trade, Women's Issues, Youth</td></tr>
  <tr><td>Chongqing Commission of Commerce</td><td>重庆市商务委员会</td><td>1</td><td>Chongqing</td><td>Trade, Economic Development</td></tr>
  <tr><td>Chongqing Department of Environmental Protection</td><td>重庆市环境保护局</td><td>1</td><td>Chongqing</td><td>Civil Society Capacity-Building, Environment</td></tr>
  <tr><td>Chonqing Bureau of Civil Affairs</td><td>重庆市民政局</td><td>1</td><td>Chongqing</td><td>Disabilities, Youth, Health, Civil Society Capacity-Building</td></tr>
  <tr><td>Fujian Department of Agriculture</td><td>福建省农业厅</td><td>1</td><td>Fujian</td><td>Arts and Culture, International Relations/Exchange</td></tr>
- <tr><td>Gansu Department of Education</td><td>甘肃省教育厅</td><td>3</td><td>Gansu</td><td>Youth, Education, Poverty Alleviation, Disaster Relief</td></tr>
+ <tr><td>Fujian Department of Civil Affairs</td><td>福建省民政厅</td><td>2</td><td>Fujian</td><td>Civil Society Capacity-Building, Youth, Labor and Migrants</td></tr>
+ <tr><td>Fujian Department of Commerce</td><td>福建省商务厅</td><td>1</td><td>Fujian</td><td>Trade, Arts and Culture, International Relations/Exchange, Education, Religion</td></tr>
+ <tr><td>Gansu Department of Education</td><td>甘肃省教育厅</td><td>3</td><td>Gansu</td><td>Education, Poverty Alleviation, Disaster Relief, Youth</td></tr>
  <tr><td>Gansu Health and Family Planning Commission</td><td>甘肃省卫生和计划生育委员会</td><td>1</td><td>Gansu</td><td>Health, Poverty Alleviation, Disaster Relief</td></tr>
  <tr><td>General Administration of Sport</td><td>国家体育总局</td><td>1</td><td>Beijing</td><td>International Relations/Exchange, Sports</td></tr>
- <tr><td>Guangdong Department of Civil Affairs</td><td>广东省民政厅</td><td>4</td><td>Guangdong</td><td>Arts and Culture, Poverty Alleviation, Labor and Migrants, Youth, Disaster Relief, Education, Civil Society Capacity-Building, Aging, International Relations/Exchange</td></tr>
+ <tr><td>Guangdong Department of Civil Affairs</td><td>广东省民政厅</td><td>4</td><td>Guangdong</td><td>Labor and Migrants, Youth, Disaster Relief, Education, Civil Society Capacity-Building, Poverty Alleviation, Aging, Arts and Culture, International Relations/Exchange</td></tr>
  <tr><td>Guangdong Department of Commerce</td><td>广东省商务厅</td><td>6</td><td>Guangdong</td><td>Trade, Economic Development</td></tr>
+ <tr><td>Guangdong Health and Family Planning Commission</td><td>广东省卫生和计划生育委员会</td><td>1</td><td>Guangdong</td><td>Health, Youth, Rural Issues, International Relations/Exchange</td></tr>
  <tr><td>Guangxi Department of Civil Affairs</td><td>广西壮族自治区民政</td><td>1</td><td>Guangxi</td><td>Youth, Disaster Relief</td></tr>
  <tr><td>Guangxi Department of Commerce</td><td>广西壮族自治区商务厅</td><td>1</td><td>Guangxi</td><td>Trade</td></tr>
  <tr><td>Guizhou Department of Civil Affairs</td><td>贵州省民政厅</td><td>1</td><td>Guizhou</td><td>Disaster Relief, Civil Society Capacity-Building, Youth, Labor and Migrants</td></tr>
  <tr><td>Heilongjiang Department of Commerce</td><td>黑龙江省商务厅</td><td>1</td><td>Heilongjiang</td><td>Trade, Tourism, Technology, Economic Development</td></tr>
+ <tr><td>Henan Department of Commerce</td><td>河南省商务厅</td><td>1</td><td>Henan</td><td>International Relations/Exchange, Trade, Culture, Economic Development</td></tr>
  <tr><td>Hubei Department of Agriculture</td><td>湖北省农业厅</td><td>1</td><td>Hubei</td><td>Agriculture</td></tr>
  <tr><td>Hubei Department of Commerce</td><td>湖北省商务厅</td><td>1</td><td>Hubei</td><td>Trade</td></tr>
  <tr><td>Hunan Department of Commerce</td><td>湖南省商务厅</td><td>1</td><td>Hunan</td><td>Trade</td></tr>
  <tr><td>Hunan Department of Education</td><td>湖南省教育厅</td><td>2</td><td>Hunan</td><td>Education, Youth, Rural Issues/Development</td></tr>
+ <tr><td>Inner Mongolia Forestry Administration</td><td>内蒙古自治区林业厅</td><td>1</td><td>Inner Mongolia</td><td>Environment</td></tr>
  <tr><td>Jiangsu Department of Commerce</td><td>江苏省商务厅</td><td>2</td><td>Jiangsu</td><td>Trade</td></tr>
  <tr><td>Jiangxi Department of Civil Affairs</td><td>江西省民政厅</td><td>1</td><td>Jiangxi</td><td>Labor and Migrants, Youth, Disaster Relief, Poverty Alleviation, Civil Society Capacity-Building</td></tr>
- <tr><td>Liaoning Department of Commerce</td><td>辽宁省商务厅</td><td>5</td><td>Liaoning</td><td>Trade, Economic Development</td></tr>
- <tr><td>Ministry of Civil Affairs</td><td>民政部</td><td>11</td><td>Beijing, Guangdong</td><td>Youth, Disabilities, Education, Disaster Relief, Health, International Relations/Exchange, Arts and Culture, Poverty Alleviation, Civil Society Capacity-Building, Environment</td></tr>
+ <tr><td>Liaoning Department of Commerce</td><td>辽宁省商务厅</td><td>6</td><td>Liaoning</td><td>Trade, Economic Development, Tourism</td></tr>
+ <tr><td>Ministry of Civil Affairs</td><td>民政部</td><td>11</td><td>Guangdong, Beijing</td><td>International Relations/Exchange, Health, Arts and Culture, Education, Poverty Alleviation, Youth, Disabilities, Disaster Relief, Civil Society Capacity-Building, Environment</td></tr>
  <tr><td>Ministry of Education</td><td>教育部</td><td>1</td><td>Beijing</td><td>Education, Youth, International Relations/Exchange</td></tr>
- <tr><td>Ministry of Environmental Protection</td><td>环境保护部</td><td>2</td><td>Beijing</td><td>Environment, Law and GovernanceEnvironment</td></tr>
+ <tr><td>Ministry of Environmental Protection</td><td>环境保护部</td><td>3</td><td>Beijing</td><td>Environment, Law and Governance, Education</td></tr>
  <tr><td>Ministry of Land and Resources</td><td>国土资源部</td><td>1</td><td>Shandong</td><td>International Relations/Exchange, Education, Rural Issues/Development</td></tr>
- <tr><td>National Copyright Administration</td><td>国家版权局</td><td>4</td><td>Beijing</td><td>Trade, Arts and Culture</td></tr>
- <tr><td>National Development and Reform Commission</td><td>国家发展和改革委员会</td><td>3</td><td>Beijing</td><td>Energy, Environment, Economic Development, International Relations/Exchange</td></tr>
+ <tr><td>National Copyright Administration</td><td>国家版权局</td><td>5</td><td>Beijing</td><td>Trade, Arts and Culture</td></tr>
+ <tr><td>National Development and Reform Commission</td><td>国家发展和改革委员会</td><td>3</td><td>Beijing</td><td>International Relations/Exchange, Economic Development, Environment, Energy</td></tr>
  <tr><td>National Health and Family Planning Commission</td><td>国家卫生和计划生育委员会</td><td>5</td><td>Beijing</td><td>Health, Education</td></tr>
  <tr><td>Shaanxi Department of Commerce</td><td>陕西省商务厅</td><td>1</td><td>Shaanxi</td><td>Trade, Arts and Culture, International Relations/Exchange</td></tr>
  <tr><td>Shaanxi Department of Education</td><td>陕西省教育厅</td><td>1</td><td>Shaanxi</td><td>Education</td></tr>
@@ -127,23 +131,28 @@ font-style: italic;
  <tr><td>Shanghai Commission of Commerce</td><td>上海市商务委员会</td><td>32</td><td>Shanghai</td><td>Trade, Economic Development, International Relations/Exchange, Technology</td></tr>
  <tr><td>Shanghai Health and Family Planning Commission</td><td>上海市卫生和计划生育委员会</td><td>1</td><td>Shanghai</td><td>Health, Poverty Alleviation, Disaster Relief</td></tr>
  <tr><td>Shanghai Institutes for International Studies</td><td>上海国际问题研究院</td><td>1</td><td>Shanghai</td><td>International Relations/Exchange, Law and Governance, Environment, Labor</td></tr>
+ <tr><td>Sichuan Department of Civil Affairs</td><td>四川省民政厅</td><td>1</td><td>Sichuan</td><td>Disaster Relief, Youth, Civil Society Capacity-Building</td></tr>
  <tr><td>Sichuan Department of Commerce</td><td>四川省商务厅</td><td>1</td><td>Sichuan</td><td>Trade</td></tr>
- <tr><td>Sichuan Department of Poverty Alleviation and Immigration</td><td>四川省扶贫和移民工作局</td><td>1</td><td>Sichuan</td><td>Poverty Alleviation, Disaster Relief, Infrastructure</td></tr>
- <tr><td>Sichuan Health and Family Planning Commission</td><td>四川省卫生和计划生育委员会</td><td>2</td><td>Sichuan</td><td>Health, Youth, Infrastructure, Education, Poverty Alleviation, Disaster Relief</td></tr>
- <tr><td>Sichuan Poverty Alleviation and Immigration Bureau</td><td>四川省扶贫和移民工作局</td><td>1</td><td>Sichuan</td><td>Rural Issues/Development, Women's Issues, Poverty Alleviation, Economic Development, Health, Environment, Education</td></tr>
+ <tr><td>Sichuan Department of Poverty Alleviation and Immigration</td><td>四川省扶贫和移民工作局</td><td>2</td><td>Sichuan</td><td>Rural Issues/Development, Women's Issues, Poverty Alleviation, Economic Development, Health, Environment, Education, Disaster Relief, Infrastructure</td></tr>
+ <tr><td>Sichuan Health and Family Planning Commission</td><td>四川省卫生和计划生育委员会</td><td>2</td><td>Sichuan</td><td>Health, Education, Poverty Alleviation, Disaster Relief, Youth, Infrastructure</td></tr>
  <tr><td>State Administration of Grain</td><td>国家粮食局</td><td>3</td><td>Beijing</td><td>Trade</td></tr>
- <tr><td>State Administration of Press, Publication, Radio, Film and Television</td><td>国家新闻出版广电总局</td><td>2</td><td>Beijing</td><td>Trade, Arts and Culture</td></tr>
- <tr><td>State Council Overseas Chinese Affairs Office</td><td>国务院侨务办公室</td><td>3</td><td>Jiangsu, Beijing, Shanghai</td><td>Education, Youth, Health, Infrastructure</td></tr>
+ <tr><td>State Administration of Press, Publication, Radio, Film, and Television</td><td>国家新闻出版广电总局</td><td>2</td><td>Beijing</td><td>Trade, Arts and Culture</td></tr>
+ <tr><td>State Council Overseas Chinese Affairs Office</td><td>国务院侨务办公室</td><td>5</td><td>Shanghai, Beijing, Jiangsu, Guangxi, Shaanxi</td><td>Infrastructure, Education, Youth, Health, Poverty Alleviation, Disaster Relief, Rural Issues/Development, Labor and Migrants</td></tr>
  <tr><td>State Ethnic Affairs Commission</td><td>国家民族事务委员会</td><td>1</td><td>Beijing</td><td>Ethnic Affairs</td></tr>
- <tr><td>State Forestry Administration</td><td>国家林业局</td><td>3</td><td>Beijing</td><td>Environment, Animal Protection</td></tr>
- <tr><td>Tianjin Commission of Commerce</td><td>天津市商务委</td><td>4</td><td>Tianjin</td><td>Trade, Arts and Culture, Tourism, International Relations/Exchange</td></tr>
- <tr><td>Tianjin Department of Civil Affairs</td><td>天津市民政局</td><td>2</td><td>Tianjin</td><td>Youth, Disabilities, Education, Poverty Alleviation, Disaster Relief, Labor and Migrants</td></tr>
+ <tr><td>State Forestry Administration</td><td>国家林业局</td><td>4</td><td>Beijing</td><td>Environment, Animal Protection</td></tr>
+ <tr><td>State Post Bureau</td><td>国家邮政局</td><td>1</td><td>Beijing</td><td>Trade</td></tr>
+ <tr><td>Tianjin Commission of Commerce</td><td>天津市商务委</td><td>4</td><td>Tianjin</td><td>Trade, International Relations/Exchange, Arts and Culture, Tourism</td></tr>
+ <tr><td>Tianjin Department of Civil Affairs</td><td>天津市民政局 </td><td>3</td><td>Tianjin</td><td>Youth, Disabilities, Education, Poverty Alleviation, Disaster Relief, Labor and Migrants, Health</td></tr>
  <tr><td>Tianjin General Labor Union</td><td>天津市总工会</td><td>1</td><td>Tianjin</td><td>Labor and Migrants</td></tr>
  <tr><td>Tibet Health and Family Planning Commission</td><td>西藏自治区卫计委</td><td>1</td><td>Tibet</td><td>Health, Ethnic Affairs</td></tr>
+ <tr><td>Yunnan Department of Civil Affairs</td><td>云南省民政厅</td><td>3</td><td>Yunnan</td><td>Disaster Relief, Youth, Civil Society Capacity-Building, Disabilities, Education, Infrastructure, Rural Issues/Development</td></tr>
+ <tr><td>Yunnan Department of Education</td><td>云南省教育厅</td><td>1</td><td>Yunnan</td><td>Education, International Relations/Exchange, Youth</td></tr>
  <tr><td>Yunnan Forestry Department</td><td>云南省林业厅</td><td>1</td><td>Yunnan</td><td>Animal Protection, Environment</td></tr>
- <tr><td>Yunnan Health and Family Planning Commission</td><td>云南省卫生和计划生育委员会</td><td>6</td><td>Yunnan</td><td>Health, Disaster Relief, Education, Poverty Alleviation</td></tr>
- <tr><td>Yunnan Office of Poverty Alleviation and Development</td><td>云南省扶贫开发办公室</td><td>2</td><td>Yunnan</td><td>Rural Issues/Development, Youth, Education, Health, Environment, Poverty Alleviation, Disaster Relief, Women's Issues</td></tr>
+ <tr><td>Yunnan Health and Family Planning Commission</td><td>云南省卫生和计划生育委员会</td><td>9</td><td>Yunnan</td><td>Health, Education, Poverty Alleviation, Disaster Relief, Disabilities</td></tr>
+ <tr><td>Yunnan Office of Poverty Alleviation and Development</td><td>云南省人民政府扶贫开发办公室</td><td>3</td><td>Yunnan</td><td>Poverty Alleviation, Disaster Relief, Rural Issues/Development, Youth, Education, Health, Environment, Women's Issues, Infrastructure, Labor and Migrants</td></tr>
+ <tr><td>Zhejiang Department of Commerce</td><td>浙江省商务厅</td><td>1</td><td>Zhejiang</td><td>Trade</td></tr>
 </tbody></table>
+
     
 <!–– add your tableizer data above this line––>
 </body>
