--- a/index_maptest.html
+++ b/index_maptest.html
@@ -993,7 +993,7 @@
           ]
         },
         "properties": {
-          "orgname_en": "Humana People to People China",
+          "orgname_en": "Humana People to People China (Yunnan)",
           "orgname_ch": "互满爱人与人国际运动联合会",
           "psu_en": "Yunnan Office of Poverty Alleviation and Development",
           "originloc": "Switzerland",
