--- a/index_maptest.html
+++ b/index_maptest.html
@@ -1104,7 +1104,7 @@
           "sector": "Health, Poverty Alleviation, Disaster Relief",
           "regloc": "Gansu",
           "regdate": "April 7, 2017",
-          "actarea": "China",
+          "actarea": "China"
         }
       },
       {
@@ -1642,7 +1642,7 @@
     "sector": "Education, Youth",
     "regloc": "Hunan",
     "regdate": "May 16, 2017",
-    "actarea": "Hunan"
+    "actarea": "Hunan",
     "website_ch": "http://www.readingdreams.com"
   }
 },
@@ -2083,7 +2083,7 @@
     "sector": "Health, International Relations/Exchange",
     "regloc": "Shandong",
     "regdate": "May 18, 2017",
-    "actarea": "Yunnan, Shaanxi, Guangdong, Anhui, Ningxia, Hubei, Shandong, Jiangxi, Qinghai, Xinjiang, Xinjiang Bingtuan, Guizhou, Jilin, Chongqing, Tianjin, Liaonin, Shanxi, Henan, Inner Mongolia, Hainan, Gansu, Tibet, Guangxi, Jiangsu, Heilongjiang, Shanghai, Zhejiang, Hunan, Hebei, Beijing, Sichuan, Fujian"
+    "actarea": "Yunnan, Shaanxi, Guangdong, Anhui, Ningxia, Hubei, Shandong, Jiangxi, Qinghai, Xinjiang, Xinjiang Bingtuan, Guizhou, Jilin, Chongqing, Tianjin, Liaonin, Shanxi, Henan, Inner Mongolia, Hainan, Gansu, Tibet, Guangxi, Jiangsu, Heilongjiang, Shanghai, Zhejiang, Hunan, Hebei, Beijing, Sichuan, Fujian",
     "website_ch": "http://www.wacd921.org/"
   }
 },
