--- a/index_maptest.html
+++ b/index_maptest.html
@@ -381,6 +381,29 @@
 "actarea": "Beijing, Hebei, Guangdong, Yunnan, Shaanxi"
 }
 },
+      
+          {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+            121.455676, 31.229181
+          ]
+        },
+        "properties": {
+          "orgname_en": "Better Cotton Initiative",
+          "orgname_ch": "瑞士良好棉花发展协会",
+          "psu_en": "Shanghai Commission of Commerce",
+          "originloc": "Switzerland",
+          "sector": "Trade",
+          "regloc": "Shanghai",
+          "regdate": "September 12, 2017",
+          "actarea": "China",
+          "website_en": "http://bettercotton.org",
+          "website_ch": "http://bettercotton.org/chinese"
+        }
+      },
+      
       {
         "type": "Feature",
         "geometry": {
