--- a/index_maptest.html
+++ b/index_maptest.html
@@ -2249,6 +2249,27 @@
     "actarea": "Beijing, Tianjin, Hebei, Shanghai, Jiangsu, Anhui, Fujian, Henan, Guangdong, Sichuan"
   }
 },
+      
+       {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+            121.407383, 31.207115
+          ]
+        },
+        "properties": {
+          "orgname_en": "Kagoshima Specialty Products Association",
+          "orgname_ch": "日本公益社团法人鹿儿岛县特产品协会",
+          "psu_en": "Shanghai Commission of Commerce",
+          "originloc": "Japan",
+          "sector": "Trade",
+          "regloc": "Shanghai",
+          "regdate": "September 12, 2017",
+          "actarea": "China"
+        }
+      },
+      
 {
 "type": "Feature",
 "geometry": {
