--- a/index_maptest.html
+++ b/index_maptest.html
@@ -1404,6 +1404,27 @@
           "website_en": "http://www.fesdc.org/"
         }
       },
+      
+      {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+            121.404103, 31.202295
+          ]
+        },
+        "properties": {
+          "orgname_en": "Fukushima Industrial Revitalization Center",
+          "orgname_ch": "公益财团法人福岛县产业振兴中心",
+          "psu_en": "Shanghai Commission of Commerce",
+          "originloc": "Japan",
+          "sector": "Trade",
+          "regloc": "Shanghai",
+          "regdate": "September 12, 2017",
+          "actarea": "China"
+        }
+      },
+      
       {
         "type": "Feature",
         "geometry": {
