--- a/index_maptest.html
+++ b/index_maptest.html
@@ -1832,6 +1832,27 @@
           "website_ch": "http://www.hppchina.org.cn/"
         }
       },
+      
+      {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+            121.404103, 31.202295
+          ]
+        },
+        "properties": {
+          "orgname_en": "Ibaraki International Exchange Association",
+          "orgname_ch": "日本公益财团法人茨城县国际交流协会",
+          "psu_en": "Shanghai Commission of Commerce",
+          "originloc": "Japan",
+          "sector": "Trade, International Relations/Exchange",
+          "regloc": "Shanghai",
+          "regdate": "September 12, 2017",
+          "actarea": "China"
+        }
+      },
+      
       {
         "type": "Feature",
         "geometry": {
