--- a/index_maptest.html
+++ b/index_maptest.html
@@ -1874,6 +1874,27 @@
         }
       },
       
+      {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+            102.761051,31.330293
+          ]
+        },
+        "properties": {
+          "orgname_en": "Humana People to People China (Sichuan)",
+          "orgname_ch": "互满爱人与人国际运动联合会",
+          "psu_en": "Sichuan Department of Education",
+          "originloc": "Switzerland",
+          "sector": "Rural Issues/Development, Youth, Education, Health, Environment, Disaster Relief, Technology, Civil Society Capacity-Building, Women’s Issues",
+          "regloc": "Sichuan",
+          "regdate": "September 8, 2017",
+          "actarea": "Sichuan",
+          "website_en": "http://www.hppchina.org.cn/en/",
+          "website_ch": "http://www.hppchina.org.cn/index.asp/"
+        }
+      },
       
       {
         "type": "Feature",
