--- a/index_maptest.html
+++ b/index_maptest.html
@@ -1879,6 +1879,26 @@
         "geometry": {
           "type": "Point",
           "coordinates": [
+            108.711991, 34.692428
+          ]
+        },
+        "properties": {
+          "orgname_en": "Horn Foundation",
+          "orgname_ch": "角声基金会",
+          "psu_en": "State Council Overseas Chinese Affairs Office, Domestic Department",
+          "originloc": "United States",
+          "sector": "Youth, Education, Poverty Alleviation, Rural Issues/Development, Labor and Migrants, Disaster Relief",
+          "regloc": "Shaanxi",
+          "regdate": "September 4, 2017",
+          "actarea": "Fujian, Guangxi, Sichuan, Guizhou, Shaanxi, Gansu, Qinghai"
+        }
+      },
+      
+      {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
              102.16095, 27.52588
           ]
         },
